@@ -24,9 +24,15 @@
 !LSHIFT 1 3
 !RSHIFT 6 4
 
-Alt_L 0 5 8
+# Tab = CTRL
+Tab 0 2 8
+# Shift + Tab = CTRL
+ISO_Left_Tab 0 2 8
+
+# Control_L = CBM
+Control_L 0 5 8
+
 BackSpace 7 0 8
-Control_L 0 2 8
 Delete 7 0 8
 Down 7 7 8
 Escape 0 3 8
@@ -41,7 +47,6 @@ F8 7 7 1
 Home 6 7 8
 Insert 6 0 8
 Left 7 2 1
-Meta_L 0 5 8
 Return 7 1 8
 Right 7 2 8
 Shift_L 1 3 2
