@@ -326,6 +326,8 @@ int pet_ui_init(void)
                                     ui_menu_separator,
                                     ui_tape_commands_menu,
                                     ui_menu_separator,
+                                    ui_smart_attach_commands_menu,
+                                    ui_menu_separator,
                                     ui_directory_commands_menu,
                                     ui_menu_separator,
                                     ui_tool_commands_menu,
